Make configuration reading from cfg files

--- a/docs/latex/refman.tex
+++ b/docs/latex/refman.tex
@@ -233,6 +233,28 @@
   \hypersetup{pageanchor=true}
 %--- Begin generated contents ---
 \input{md_README}
+\chapter{Topic Index}
+\input{topics}
+\chapter{Class Index}
+\input{annotated}
+\chapter{File Index}
+\input{files}
+\chapter{Topic Documentation}
+\input{group__configuration}
+\chapter{Class Documentation}
+\input{classconfig_1_1ConfigManager}
+\input{classConfigManager}
+\input{structconfig_1_1FATConfig}
+\input{structFATConfig}
+\input{structconfig_1_1SystemInfoConfig}
+\input{structSystemInfoConfig}
+\input{structconfig_1_1SystemInfoConfig_1_1Version}
+\input{structSystemInfoConfig_1_1Version}
+\chapter{File Documentation}
+\input{config__manager_8h}
+\input{config__manager_8h_source}
+\input{fat__config_8h_source}
+\input{system__info__config_8h_source}
 %--- End generated contents ---
 % Index
   \backmatter
